Fix pipeline failure.